--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only server/index.ts",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "keywords": [],
